; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_opt.c_set_string_fmt.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_opt.c_set_string_fmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

@.str = private unnamed_addr constant [5 x i8] c"none\00", align 1
@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [41 x i8] c"Unable to parse option value \22%s\22 as %s\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [62 x i8] c"Value %d for parameter '%s' out of %s format range [%d - %d]\0A\00", align 1
@ERANGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.TYPE_3__*, i8*, i32*, i32, i32 (i8*)*, i8*)* @set_string_fmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_string_fmt(i8* %0, %struct.TYPE_3__* %1, i8* %2, i32* %3, i32 %4, i32 (i8*)* %5, i8* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_3__*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32 (i8*)*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i8*, align 8
  store i8* %0, i8** %9, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %10, align 8
  store i8* %2, i8** %11, align 8
  store i32* %3, i32** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32 (i8*)* %5, i32 (i8*)** %14, align 8
  store i8* %6, i8** %15, align 8
  %20 = load i8*, i8** %11, align 8
  %21 = icmp ne i8* %20, null
  br i1 %21, label %22, label %26

22:                                               ; preds = %7
  %23 = load i8*, i8** %11, align 8
  %24 = call i32 @strcmp(i8* %23, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %27, label %26

26:                                               ; preds = %22, %7
  store i32 -1, i32* %16, align 4
  br label %54

27:                                               ; preds = %22
  %28 = load i32 (i8*)*, i32 (i8*)** %14, align 8
  %29 = load i8*, i8** %11, align 8
  %30 = call i32 %28(i8* %29)
  store i32 %30, i32* %16, align 4
  %31 = load i32, i32* %16, align 4
  %32 = icmp eq i32 %31, -1
  br i1 %32, label %33, label %53

33:                                               ; preds = %27
  %34 = load i8*, i8** %11, align 8
  %35 = call i32 @strtol(i8* %34, i8** %19, i32 0)
  store i32 %35, i32* %16, align 4
  %36 = load i8*, i8** %19, align 8
  %37 = load i8, i8* %36, align 1
  %38 = sext i8 %37 to i32
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %44, label %40

40:                                               ; preds = %33
  %41 = load i32, i32* %16, align 4
  %42 = load i32, i32* %13, align 4
  %43 = icmp uge i32 %41, %42
  br i1 %43, label %44, label %52

44:                                               ; preds = %40, %33
  %45 = load i8*, i8** %9, align 8
  %46 = load i32, i32* @AV_LOG_ERROR, align 4
  %47 = load i8*, i8** %11, align 8
  %48 = load i8*, i8** %15, align 8
  %49 = call i32 (i8*, i32, i8*, ...) @av_log(i8* %45, i32 %46, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0), i8* %47, i8* %48)
  %50 = load i32, i32* @EINVAL, align 4
  %51 = call i32 @AVERROR(i32 %50)
  store i32 %51, i32* %8, align 4
  br label %97

52:                                               ; preds = %40
  br label %53

53:                                               ; preds = %52, %27
  br label %54

54:                                               ; preds = %53, %26
  %55 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %56 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %55, i32 0, i32 2
  %57 = load i32, i32* %56, align 4
  %58 = call i32 @FFMAX(i32 %57, i32 -1)
  store i32 %58, i32* %17, align 4
  %59 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %60 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %59, i32 0, i32 1
  %61 = load i32, i32* %60, align 4
  %62 = load i32, i32* %13, align 4
  %63 = sub nsw i32 %62, 1
  %64 = call i32 @FFMIN(i32 %61, i32 %63)
  store i32 %64, i32* %18, align 4
  %65 = load i32, i32* %17, align 4
  %66 = icmp eq i32 %65, 0
  br i1 %66, label %67, label %73

67:                                               ; preds = %54
  %68 = load i32, i32* %18, align 4
  %69 = icmp eq i32 %68, 0
  br i1 %69, label %70, label %73

70:                                               ; preds = %67
  store i32 -1, i32* %17, align 4
  %71 = load i32, i32* %13, align 4
  %72 = sub nsw i32 %71, 1
  store i32 %72, i32* %18, align 4
  br label %73

73:                                               ; preds = %70, %67, %54
  %74 = load i32, i32* %16, align 4
  %75 = load i32, i32* %17, align 4
  %76 = icmp slt i32 %74, %75
  br i1 %76, label %81, label %77

77:                                               ; preds = %73
  %78 = load i32, i32* %16, align 4
  %79 = load i32, i32* %18, align 4
  %80 = icmp sgt i32 %78, %79
  br i1 %80, label %81, label %94

81:                                               ; preds = %77, %73
  %82 = load i8*, i8** %9, align 8
  %83 = load i32, i32* @AV_LOG_ERROR, align 4
  %84 = load i32, i32* %16, align 4
  %85 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %86 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %85, i32 0, i32 0
  %87 = load i32, i32* %86, align 4
  %88 = load i8*, i8** %15, align 8
  %89 = load i32, i32* %17, align 4
  %90 = load i32, i32* %18, align 4
  %91 = call i32 (i8*, i32, i8*, ...) @av_log(i8* %82, i32 %83, i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.2, i64 0, i64 0), i32 %84, i32 %87, i8* %88, i32 %89, i32 %90)
  %92 = load i32, i32* @ERANGE, align 4
  %93 = call i32 @AVERROR(i32 %92)
  store i32 %93, i32* %8, align 4
  br label %97

94:                                               ; preds = %77
  %95 = load i32, i32* %16, align 4
  %96 = load i32*, i32** %12, align 8
  store i32 %95, i32* %96, align 4
  store i32 0, i32* %8, align 4
  br label %97

97:                                               ; preds = %94, %81, %44
  %98 = load i32, i32* %8, align 4
  ret i32 %98
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @strtol(i8*, i8**, i32) #1

declare dso_local i32 @av_log(i8*, i32, i8*, ...) #1

declare dso_local i32 @AVERROR(i32) #1

declare dso_local i32 @FFMAX(i32, i32) #1

declare dso_local i32 @FFMIN(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
